# bot

./: .dockerignore  .env-example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint-build-deploy.yml
mahebot/: __main__.py  bot.py
osfbot/: __main__.py  bot.py  constants.py
osfbot/exts/moderation/: logs.py  messages.py  validate.py
osfbot/exts/utils/: bot_stats.py
