[tool.poetry]
name = "mahe-bot"
version = "0.1.0"
description = "A community bot used in the MIT CO-25 server."
authors = ["dhzdhd"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {url = "https://github.com/Rapptz/discord.py/archive/45d498c1b76deaf3b394d17ccf56112fa691d160.zip"}

[tool.poetry.dev-dependencies]
flake8 = "~=3.8"
flake8-annotations = "~=2.0"
flake8-bugbear = "~=20.1"
flake8-docstrings = "~=1.4"
flake8-import-order = "~=0.18"
flake8-string-format = "~=0.2"
flake8-tidy-imports = "~=4.0"
flake8-todo = "~=0.7"
pep8-naming = "~=0.9"
taskipy = "^1.9.0"
black = "^21.9b0"
pre-commit = "^2.15.0"
python-dotenv = "^0.19.1"

[tool.taskipy.tasks]
bot = { cmd = "python -m mahebot", help = "Runs Bot"}
lint = { cmd = "pre-commit run --all-files", help = "Lints project" }
precommit = { cmd = "pre-commit install", help = "Installs the pre-commit git hook" }
format = { cmd = "black mahebot", help = "Runs the black python formatter" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
